fix: horizontal scroll

--- a/src/pages/Home/sections/Pictures/Pictures.scss
+++ b/src/pages/Home/sections/Pictures/Pictures.scss
@@ -20,11 +20,13 @@
   padding: 10px 10px 40px;
   margin: 16px auto;
   @include media-laptop {
-    width: 730px;
+    max-width: 730px;
+    width: 100%;
     height: 369px;
   }
   @include media-tablet {
-    width: 358px;
+    max-width: 358px;
+    width: 100%;
     height: 210px;
     padding: 0 0 25px;
   }
